packages/lustre-v6.6.103.3/test/should_fail/type/merge_bad_enum.lus
type trival = enum { Pile, Face, Tranche }; ---
type okko = enum { Ok,ko }; ---
node merge_bad_enum(clk: trival; ---
   i1 : int when Pile(clk) ; 
   i2 : int when Face(clk); 
   i3 : int when Tranche(clk)) 
returns (y: int); ---
let
    y = merge clk
        (Pile ->  i1)
        (Ok ->    i2)
        (Tranche -> i3);
tel